# curlman

./: CMakeLists.txt  README.md  appsettings.h  headervector.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  request.h  response.cpp  response.h  temp
include/: appsettings.h  header.h  headervector.h
src/: appsettings.cpp  header.cpp  headervector.cpp  main.cpp  request.cpp
ui/: mainwindow.ui
